--- a/index.html
+++ b/index.html
@@ -1,74 +1,75 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="zh-CN">
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Sevenrui.GitHub.io : ">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Sevenrui.GitHub.io</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="唐锐的主页">
+    <meta name="author" content="唐锐">
+    <title>Troy's Blog | 唐锐</title>
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link href="http://libs.useso.com/js/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/cover.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/mystyle.css">
+    <link href='http://fonts.useso.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+    <style>   
+        @media screen and (max-width: 960px) {
+          body{
+            background-image: url(http://7xjr92.com1.z0.glb.clouddn.com/纹理stardust.png);
+          }
+        }</style>
   </head>
 
   <body>
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand"><a href="confession/index.html"><img src="http://7xjr92.com1.z0.glb.clouddn.com/头像logo.png" height="100" width="100" alt="logo"></a></h3>
+              <nav>
+                <ul class="nav masthead-nav">
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="examples/daouban/index.html">Examples</a></li>
+                  <li><a href="mailto:ruitang307@gmail.com">Contact</a></li>
+                  <li><a href="https://github.com/troywith77">GitHub</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/sevenrui">View on GitHub</a>
+          <div class="inner cover">
+            <h1 class="cover-heading">Troy</h1>
+            <p class="lead">Thoughts, stories and ideas.</p>
+            <p class="lead">
+              <a href="resume.html" class="btn btn-lg btn-default">Resume</a>
+              <a href="blog/index.html" class="btn btn-lg btn-default">Blog</a>
+            </p>
+          </div>
 
-          <h1 id="project_title">Sevenrui.GitHub.io</h1>
-          <h2 id="project_tagline"></h2>
-
-        </header>
+          <div class="mastfoot">
+            <div class="inner">
+              <p>ruitang307@gmail.com, by <a href="https://github.com/troywith77" id="github">GitHub</a>.</p>
+            </div>
+            <p id="music-tag" onmouseover="showMusic()">Music</p>
+            <div id="music" style="visibility:hidden"><audio src="http://qzone.haoduoge.com/music3/2015-02-06/1423187219.mp3" width="10" height="10" controls></audio></div>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
+    <script>
+        function showMusic(){
+          var music = document.getElementById("music");
+          music.style.visibility = "visible";
+        }
+    </script>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <!--<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>-->
   </body>
 </html>
